--- a/projects/notification-elements/notification-dialog/notification-dialog.component.html
+++ b/projects/notification-elements/notification-dialog/notification-dialog.component.html
@@ -1,3 +1,20 @@
 <p>notification-dialog works!</p>
 
-<p>some count : {{count | async}}</p>
+<mat-card class="example-card">
+  <mat-card-header>
+    <div mat-card-avatar class="example-header-image"></div>
+    <mat-card-title>Shiba Inu</mat-card-title>
+    <mat-card-subtitle>Dog Breed</mat-card-subtitle>
+  </mat-card-header>
+  <img mat-card-image src="https://material.angular.io/assets/img/examples/shiba2.jpg" alt="Photo of a Shiba Inu">
+  <mat-card-content>
+    <p>some count for one way binding : {{count | async}}</p>
+    <input type="text" [(ngModel)]="myText" >
+
+  <p>Showing the text (two way binding ) : {{myText}}</p>
+  </mat-card-content>
+  <mat-card-actions>
+    <button mat-button>LIKE</button>
+    <button mat-button>SHARE</button>
+  </mat-card-actions>
+</mat-card>
